[package]
name = "rsnew"
version = "0.1.0"
edition = "2021"
rdev = "0.5.3"
yup-oauth2 = "4.2" 
google-drive3 = "*"
tokio = { version = "1", features = ["full"] } 
mime = "0.3.17"

[dependencies]
chrono = "0.4.38"
mime = "0.3.17"
rdev = "0.5.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
winapi = "0.3.9"
windows-service = "0.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
serde = {version = "1.0.214", features = ["derive"] }
serde_json = "1.0.140"
screenshots = "0.8.10"
